--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/ashish-wakalkar-69a037106/">LinkedIn</a>
     <a class="footer-link" href="https://www.facebook.com/ashu.wakalkar.5">Facebook</a>
-    <a class="footer-link" href="https://www.varcus.in/">Website</a>
+    <a class="footer-link" href="https://github.com/AshishWakalkar">Github</a>
     <p>© 2020 Ashish Wakalkar.</p>
   </div>
 </body>
