--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         </p>
         <a href="https://xd.adobe.com/view/4c43251b-1316-4039-9c72-0e6ac56acbb5-1910/"><img class="port-1" src="images/port.jpeg" alt=""></a>
     </div>
+    <h2>My Portfolio</h2>
+    <p>
+      Click on the button below to view my entire pdf compromising of all my projects.
+    </p>
+
+    <a class="btn" href="Portfolio.pdf">Download</a>
     <div class="skills">
       <h2>What Can I Do.</h2>
       <div class="skill-row">
